# Udemy-ROS2-tutorial

./: .gitignore  README.md
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  hardware_status_publisher.cpp  my_first_node.cpp  number_counter.cpp  number_publisher.cpp  robot_news_station.cpp  smartphone.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: LED_panel.py  add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  battery_node.py  hardware_status_publisher.py  my_first_node.py  number_publisher.py  robot_news_station.py  smartphone.py  template_python_node.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: number_app.yaml  robot_news.yaml
src/my_robot_bringup/launch/: number_app.launch.xml  number_app_from_python.launch.xml  robot_news.launch.xml
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/msg/: HardwareStatus.msg
src/my_robot_interfaces/srv/: ComputeRectangleArea.srv  SetLed.srv
